--- a/index.html
+++ b/index.html
@@ -11,6 +11,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  
+  iniciando o projeto
 </body>
 </html>
