--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  iniciando o projeto
+  <header>
+    <img src="assets/images/Avatar.png" alt="Imagem de Martina">
+    <h2 class="subtitle">Hello World! Meu nome é<span class="destaque"> Martina Santos</span> e sou</h2>
+    <h1>Desenvolvedora Fullstack</h1>
+    <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+  </header>
+
+  <nav>
+
+  </nav>
+
+  <a href="#">link</a>
+ 
 </body>
 </html>
