--- a/index.html
+++ b/index.html
@@ -11,16 +11,41 @@
   <link href="https://fonts.googleapis.com/css2?family=Asap:ital,wght@0,100..900;1,100..900&family=Inconsolata:wght@200..900&family=Maven+Pro:wght@400..900&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header>
+  <header class="container">
     <img src="assets/images/Avatar.png" alt="Imagem de Martina">
     <h2 class="subtitle">Hello World! Meu nome é<span class="destaque"> Martina Santos</span> e sou</h2>
     <h1>Desenvolvedora Fullstack</h1>
     <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+    <nav>
+      <div>
+        <img src="assets/icons/GitHub.svg" alt="icone github">
+        <h4>GitHub</h4>
+      </div>
+      <div>
+        <img src="assets/icons/HTML.svg" alt="icone html">
+        <h4>HTML</h4>
+      </div>
+      <div>
+        <img src="assets/icons/CSS.svg" alt="icone CSS">
+        <h4>CSS</h4>
+      </div>
+      <div>
+        <img src="assets/icons/JavaScript.svg" alt="icone JAVA">
+        <h4>JavaScript</h4>
+      </div>
+      <div>
+        <img src="assets/icons/React.svg" alt="icone react">
+        <h4>React</h4>
+      </div>
+      <div>
+        <img src="assets/icons/Node.js.svg" alt="icone Node.js">
+        <h4>Node.js</h4>
+      </div>
+
+    </nav>
   </header>
 
-  <nav>
-
-  </nav>
+  
 
   <a href="#">link</a>
  
