--- a/index.html
+++ b/index.html
@@ -18,27 +18,27 @@
     <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
     <nav>
       <div>
-        <img src="assets/icons/GitHub.svg" alt="icone github">
+        <img src="assets/icons.color/GitHub.svg" alt="icone github">
         <h4>GitHub</h4>
       </div>
-      <div>
-        <img src="assets/icons/HTML.svg" alt="icone html">
+      <div id="html">
+        <img src="assets/icons.color/HTML.svg" alt="icone html">
         <h4>HTML</h4>
       </div>
       <div>
-        <img src="assets/icons/CSS.svg" alt="icone CSS">
-        <h4>CSS</h4>
+        <img src="assets/icons.color/css.svg" alt="icone CSS">
+        <h4>CSS</gh4>
       </div>
       <div>
-        <img src="assets/icons/JavaScript.svg" alt="icone JAVA">
+        <img src="assets/icons.color/JavaScript.svg" alt="icone JAVA">
         <h4>JavaScript</h4>
       </div>
       <div>
-        <img src="assets/icons/React.svg" alt="icone react">
+        <img src="assets/icons.color/React.svg" alt="icone react">
         <h4>React</h4>
       </div>
       <div>
-        <img src="assets/icons/Node.js.svg" alt="icone Node.js">
+        <img src="assets/icons.color/Node.js.svg" alt="icone Node.js">
         <h4>Node.js</h4>
       </div>
 
