continuando header + main

--- a/index.html
+++ b/index.html
@@ -12,42 +12,70 @@
 </head>
 <body>
   <header class="container">
-    <img src="assets/images/Avatar.png" alt="Imagem de Martina">
+    <div>
+      <img src="assets/images/Avatar.png" alt="Imagem de Martina">
+  </div>
     <h2 class="subtitle">Hello World! Meu nome é<span class="destaque"> Martina Santos</span> e sou</h2>
     <h1>Desenvolvedora Fullstack</h1>
-    <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
+    <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br> minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
     <nav>
-      <div>
+      <figure>
         <img src="assets/icons.color/GitHub.svg" alt="icone github">
-        <h4>GitHub</h4>
-      </div>
-      <div id="html">
+        <figcaption>
+          <span>GitHub</span>
+        </figcaption>
+        
+      </figure>
+
+      <figure>
         <img src="assets/icons.color/HTML.svg" alt="icone html">
-        <h4>HTML</h4>
-      </div>
-      <div>
+        <figcaption>
+          <span>HTML</span>
+        </figcaption>
+        
+      </figure>
+
+      <figure>
         <img src="assets/icons.color/css.svg" alt="icone CSS">
-        <h4>CSS</gh4>
-      </div>
-      <div>
+        <figcaption>
+          <span>CSS</span>
+        </figcaption>
+      </figure>
+
+      <figure>
         <img src="assets/icons.color/JavaScript.svg" alt="icone JAVA">
-        <h4>JavaScript</h4>
-      </div>
-      <div>
+        <figcaption>
+          <span>JavaScript</span>
+        </figcaption>
+      </figure>
+
+      <figure>
         <img src="assets/icons.color/React.svg" alt="icone react">
-        <h4>React</h4>
-      </div>
-      <div>
+        <figcaption>
+          <span>React</span>
+        </figcaption>
+      </figure>
+
+      <figure>
         <img src="assets/icons.color/Node.js.svg" alt="icone Node.js">
-        <h4>Node.js</h4>
-      </div>
+        <figcaption>
+          <span>Node.js</span>
+        </figcaption>
+      </figure>
 
     </nav>
+    <div id="arrow">
+      <img src="assets/icons/CaretDoubleDown.svg" alt="seta dupla para baixo">
+    </div>
   </header>
 
-  
-
-  <a href="#">link</a>
+  <main class="grid"> 
+    <section>
+      <div id="header"> 
+        Contato
+      </div>
+    </section>
+  </main>
  
 </body>
 </html>
