--- a/index.html
+++ b/index.html
@@ -69,12 +69,123 @@
     </div>
   </header>
 
-  <main class="grid"> 
-    <section>
-      <div id="header"> 
+  <main id="main"> 
+    <section id="contato">
+      <div> 
         Contato
       </div>
+      <div>
+        Gostou do meu trabalho? 
+      </div>
+      <div>
+        Entre em contato ou acompanhe as minhas redes sociais!
+      </div>
     </section>
+
+    <section class="services">
+      <header>
+        <div>
+          Meu trabalho
+        </div>
+        <div>
+          Veja os projetos em destaque
+        </div>
+      </header> 
+
+      <div id="trabalhos">
+        <figure class="block">
+          <img src="assets/images/Thumbnail_Project-01.png" alt="projeto 01">
+          <figcaption>
+            <h4>Travelgram</h4>
+            <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+          </figcaption>  
+        </figure>
+
+        <figure class="block">
+          <img src="assets/images/Thumbnail_Project-02.png" alt="projeto 02">
+          <figcaption>
+            <h4>Tech News</h4>
+            <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+          </figcaption>  
+        </figure>
+
+        <figure class="block">
+          <img src="assets/images/Thumbnail_Project-03.png" alt="projeto 03">
+          <figcaption>
+            <h4>Página de receita</h4>
+            <p>Página com o passo a passo de uma receita para cupcakes</p>
+          </figcaption>  
+        </figure>
+
+        <figure class="block">
+          <img src="assets/images/Thumbnail_Project-04.png" alt="projeto 04">
+          <figcaption>
+            <h4>Zingen</h4>
+            <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+          </figcaption>  
+        </figure>
+
+        <figure class="block">
+          <img src="assets/images/Thumbnail_Project-05.png" alt="projeto 05">
+          <figcaption>
+            <h4>Refund</h4>
+            <p>Um sistema para pedido e acompanhamento de reembolso</p>
+          </figcaption>  
+        </figure>
+
+        <figure class="block">
+          <img src="assets/images/Thumbnail_Project-06.png" alt="projeto 06">
+          <figcaption>
+            <h4>Página de turismo</h4>
+            <p>Página com as principais informações para quem quer viajar para Busan</p>
+          </figcaption>  
+        </figure>  
+      </div>
+    </section>
+
+    <section class="services">
+      <div>
+        Meus serviços
+      </div>
+      <div>
+        Como posso ajudar o seu negócio
+      </div>
+    </section>
+
+    <section id="card" class="grid">
+      <div>
+        <img src="assets/icons.color/Devices.svg" alt="icone de computador">
+        <div class="primary">
+          Websites e Aplicativos
+        </div>
+        <div class="secondary">
+          Desenvolvimento de interfaces
+        </div>
+      </div>
+
+      <div>
+        <img src="assets/icons.color/api.svg" alt="icone de drive">
+        <div class="primary">
+          API e banco de dados
+        </div>
+        <div class="secondary">
+          Criação de serviços do sistema 
+        </div>
+      </div>
+
+      <div>
+        <img src="assets/icons.color/Infinity.svg" alt="icone de infinito">
+        <div class="primary">
+          DevOps
+        </div>
+        <div class="secondary">
+          Gestão e infraestrutura da aplicação
+        </div>
+      </div>
+
+    </section>
+
+    
   </main>
  
 </body>
