--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
       </div>
     </section>
 
-    <section class="services">
-      <header>
+    <section>
+      <header class="services">
         <div>
           Meu trabalho
         </div>
