--- a/index.html
+++ b/index.html
@@ -19,44 +19,42 @@
     <h1>Desenvolvedora Fullstack</h1>
     <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br> minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
     <nav>
-      <figure>
+      <figure class="content-tag">
         <img src="assets/icons.color/GitHub.svg" alt="icone github">
         <figcaption>
           <span>GitHub</span>
-        </figcaption>
-        
+        </figcaption> 
       </figure>
 
-      <figure>
+      <figure class="content-tag">
         <img src="assets/icons.color/HTML.svg" alt="icone html">
         <figcaption>
           <span>HTML</span>
         </figcaption>
-        
       </figure>
 
-      <figure>
+      <figure class="content-tag">
         <img src="assets/icons.color/css.svg" alt="icone CSS">
         <figcaption>
           <span>CSS</span>
         </figcaption>
       </figure>
 
-      <figure>
+      <figure class="content-tag">
         <img src="assets/icons.color/JavaScript.svg" alt="icone JAVA">
         <figcaption>
           <span>JavaScript</span>
         </figcaption>
       </figure>
 
-      <figure>
+      <figure class="content-tag">
         <img src="assets/icons.color/React.svg" alt="icone react">
         <figcaption>
           <span>React</span>
         </figcaption>
       </figure>
 
-      <figure>
+      <figure class="content-tag">
         <img src="assets/icons.color/Node.js.svg" alt="icone Node.js">
         <figcaption>
           <span>Node.js</span>
@@ -83,21 +81,21 @@
     </section>
 
     <section>
-      <header class="services">
+      <section class="services">
         <div>
           Meu trabalho
         </div>
         <div>
           Veja os projetos em destaque
         </div>
-      </header> 
+      </section> 
 
       <div id="trabalhos">
         <figure class="block">
           <img src="assets/images/Thumbnail_Project-01.png" alt="projeto 01">
           <figcaption>
-            <h4>Travelgram</h4>
-            <p>Rede social onde as pessoas mostram os registros de suas viagens pelo mundo</p>
+            <h4 >Travelgram</h4>
+            <p>Rede social onde as pessoas mostram os <br> registros de suas viagens pelo mundo</p>
           </figcaption>  
         </figure>
 
@@ -105,7 +103,7 @@
           <img src="assets/images/Thumbnail_Project-02.png" alt="projeto 02">
           <figcaption>
             <h4>Tech News</h4>
-            <p>Homepage de um portal de notícias sobre a área de tecnologia</p>
+            <p>Homepage de um portal de notícias sobre a <br> área de tecnologia</p>
           </figcaption>  
         </figure>
 
@@ -113,7 +111,7 @@
           <img src="assets/images/Thumbnail_Project-03.png" alt="projeto 03">
           <figcaption>
             <h4>Página de receita</h4>
-            <p>Página com o passo a passo de uma receita para cupcakes</p>
+            <p>Página com o passo a passo de uma receita <br> para cupcakes</p>
           </figcaption>  
         </figure>
 
@@ -121,7 +119,7 @@
           <img src="assets/images/Thumbnail_Project-04.png" alt="projeto 04">
           <figcaption>
             <h4>Zingen</h4>
-            <p>Landing Page completa e responsiva de um aplicativo de Karaokê</p>
+            <p>Landing Page completa e responsiva de um <br> aplicativo de Karaokê</p>
           </figcaption>  
         </figure>
 
@@ -129,7 +127,7 @@
           <img src="assets/images/Thumbnail_Project-05.png" alt="projeto 05">
           <figcaption>
             <h4>Refund</h4>
-            <p>Um sistema para pedido e acompanhamento de reembolso</p>
+            <p>Um sistema para pedido e acompanhamento <br> de reembolso</p>
           </figcaption>  
         </figure>
 
@@ -137,7 +135,7 @@
           <img src="assets/images/Thumbnail_Project-06.png" alt="projeto 06">
           <figcaption>
             <h4>Página de turismo</h4>
-            <p>Página com as principais informações para quem quer viajar para Busan</p>
+            <p>Página com as principais informações para <br> quem quer viajar para Busan</p>
           </figcaption>  
         </figure>  
       </div>
