--- a/index.html
+++ b/index.html
@@ -60,15 +60,15 @@
           <span>Node.js</span>
         </figcaption>
       </figure>
-
     </nav>
+
     <div id="arrow">
       <img src="assets/icons/CaretDoubleDown.svg" alt="seta dupla para baixo">
     </div>
   </header>
 
   <main id="main"> 
-    <section>
+    <section id="projects">
       <section class="services">
         <div>
           Meu trabalho
@@ -129,6 +129,7 @@
       </div>
     </section>
 
+  <section id="block">
     <section class="services">
       <div>
         Meus serviços
@@ -137,7 +138,7 @@
         Como posso ajudar o seu negócio
       </div>
     </section>
-
+  
     <section id="card" class="grid">
       <div>
         <img src="assets/icons.color/Devices.svg" alt="icone de computador">
@@ -169,6 +170,7 @@
         </div>
       </div>
     </section>
+  </section>
 
     <section id="contato">
       <div> 
