--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <header class="container">
     <div>
       <img src="assets/images/Avatar.png" alt="Imagem de Martina">
-  </div>
+    </div>
     <h2 class="subtitle">Hello World! Meu nome é<span class="destaque"> Martina Santos</span> e sou</h2>
     <h1>Desenvolvedora Fullstack</h1>
     <p>Transformo necessidades em aplicações reais, evolventes e funcionais. Desenvolvo sistemas através da <br> minha paixão pela tecnologia, contribuindo com soluções inovadoras e eficazes para desafios complexos.</p>
@@ -69,7 +69,7 @@
 
   <main id="main"> 
     <section id="projects">
-      <section class="services">
+      <section id="ajudar">
         <div>
           Meu trabalho
         </div>
@@ -129,8 +129,8 @@
       </div>
     </section>
 
-  <section id="block">
-    <section class="services">
+    <section id="services">
+    <section id="ajudar">
       <div>
         Meus serviços
       </div>
@@ -170,20 +170,51 @@
         </div>
       </div>
     </section>
-  </section>
+    </section>
 
+  </main>
+  
+  <footer>
     <section id="contato">
-      <div> 
-        Contato
-      </div>
-      <div>
-        Gostou do meu trabalho? 
-      </div>
-      <div>
-        Entre em contato ou acompanhe as minhas redes sociais!
+      <header id="gostou">
+        <div class="item">Contato</div>
+        <div class="item">Gostou do meu trabalho?</div>
+        <div class="item">Entre em contato ou acompanhe as minhas redes sociais!</div>
+      </header>
+     
+      <div class="tags">
+        <a href="#">
+          <!-- <a href="#"> -->
+            <img src="assets/icons/LinkedinLogo.svg" alt="icone Linkedin">
+            <span>Linkedin</span>
+            <span></span>
+            <img src="assets/icons/arrowblue.svg" alt="Seta azul">
+          <!-- </a> -->
+        </a>
+
+        <a href="#">
+          <img src="assets/icons/InstagramLogo.svg" alt="icone Instagram">
+          <figcaption>
+            <span>Instagram</span>
+          </figcaption> 
+        </a>
+
+        <a href="#">
+          <img src="assets/icons/GithubLogo.svg" alt="icone github">
+          <figcaption>
+            <span>GitHub</span>
+          </figcaption> 
+        </a>
+
+        <a href="#">
+          <img src="assets/icons/EnvelopeSimple.svg" alt="icone E-mail">
+          <figcaption>
+            <span>E-mail</span>
+          </figcaption> 
+        </a>
       </div>
     </section>
-  </main>
+  </footer>
  
 </body>
 </html>
