--- a/index.html
+++ b/index.html
@@ -184,33 +184,31 @@
      
       <div class="tags">
         <a href="#">
-          <!-- <a href="#"> -->
-            <img src="assets/icons/LinkedinLogo.svg" alt="icone Linkedin">
-            <span>Linkedin</span>
-            <span></span>
-            <img src="assets/icons/arrowblue.svg" alt="Seta azul">
-          <!-- </a> -->
+          <img src="assets/icons/LinkedinLogo.svg" alt="" id="icone">
+          <p>Linkedin</p>
+          <!-- <span></span> -->
+          <img src="assets/icons/arrowblue.svg" alt="">
         </a>
 
         <a href="#">
-          <img src="assets/icons/InstagramLogo.svg" alt="icone Instagram">
-          <figcaption>
-            <span>Instagram</span>
-          </figcaption> 
+          <img src="assets/icons/InstagramLogo.svg" alt="">
+          <p>Instagram</p>
+          <!-- <span></span> -->
+          <img src="assets/icons/arrowblue.svg" alt="">
         </a>
 
         <a href="#">
-          <img src="assets/icons/GithubLogo.svg" alt="icone github">
-          <figcaption>
-            <span>GitHub</span>
-          </figcaption> 
+         <img src="assets/icons/GithubLogo.svg" alt="">
+         <p>GitHub</p>
+          <!-- <span></span> -->
+         <img src="assets/icons/arrowblue.svg" alt="" id="direita">
         </a>
 
         <a href="#">
-          <img src="assets/icons/EnvelopeSimple.svg" alt="icone E-mail">
-          <figcaption>
-            <span>E-mail</span>
-          </figcaption> 
+          <img src="assets/icons/EnvelopeSimple.svg" alt="">
+          <p>E-mail</p>
+         <!-- <span></span> -->
+          <img src="assets/icons/arrowblue.svg" alt="">
         </a>
       </div>
     </section>
