ajustando paddings e hover

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         </div>
       </section> 
 
-      <div id="trabalhos">
+      <div id="trabalhos" class="square">
         <figure class="block">
           <img src="assets/images/Thumbnail_Project-01.png" alt="projeto 01">
           <figcaption>
@@ -183,32 +183,28 @@
       </header>
      
       <div class="tags">
-        <a href="#">
+        <a href="#" class="tag">
           <img src="assets/icons/LinkedinLogo.svg" alt="" id="icone">
           <p>Linkedin</p>
-          <!-- <span></span> -->
-          <img src="assets/icons/arrowblue.svg" alt="">
+          <img src="assets/icons/arrowblue.svg" alt="" class="arrow">
         </a>
 
-        <a href="#">
+        <a href="#" class="tag">
           <img src="assets/icons/InstagramLogo.svg" alt="">
           <p>Instagram</p>
-          <!-- <span></span> -->
-          <img src="assets/icons/arrowblue.svg" alt="">
+          <img src="assets/icons/arrowblue.svg" alt="" class="arrow" >
         </a>
 
-        <a href="#">
+        <a href="#" class="tag">
          <img src="assets/icons/GithubLogo.svg" alt="">
          <p>GitHub</p>
-          <!-- <span></span> -->
-         <img src="assets/icons/arrowblue.svg" alt="" id="direita">
+         <img src="assets/icons/arrowblue.svg" alt="" class="arrow">
         </a>
 
-        <a href="#">
+        <a href="#" class="tag">
           <img src="assets/icons/EnvelopeSimple.svg" alt="">
           <p>E-mail</p>
-         <!-- <span></span> -->
-          <img src="assets/icons/arrowblue.svg" alt="">
+          <img src="assets/icons/arrowblue.svg" alt="" class="arrow">
         </a>
       </div>
     </section>
